# shuttleslide

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  intro.md  pyproject.toml  requirements.txt
docs/: cli-reference.md  comparison.md  publishing.md  python-api.md  round-trip.md
example/: README.md
example/ai-generated/: 1.html  2.html  3.html  4.html  5.html  6.html  README.md  presentation.json
example/html-to-pptx/: README.md  sample.html  sample.pptx
example/pptx-to-html/: 1.html  1.pptx  README.md  sample.html  sample.pptx
src/shuttleslide/: __init__.py  cli.py
src/shuttleslide/_vendored/: __init__.py
src/shuttleslide/_vendored/svg_to_pptx/: __init__.py  drawingml_context.py  drawingml_elements.py  drawingml_utils.py
src/shuttleslide/agent/: __init__.py  asyncio_diag.py  callbacks.py  cdn_assets.py  config.py  dsl_to_html.py  geometry.py  html_contract.py  html_guide.py  orchestrator.py  prompts.py  state.py  theme_tokens.py
src/shuttleslide/agent/llm/: __init__.py  client.py  tool_call.py
src/shuttleslide/agent/nodes/: __init__.py  image_acquirer.py  outline_planner.py  slide_builder.py  theme_designer.py
src/shuttleslide/agent/nodes/image_sources/: __init__.py  acquire.py  bing_web.py  describer.py  screenshot.py  search.py  verifier.py
src/shuttleslide/agent/review/: __init__.py  broadcaster.py  core_stages.py  house_rules_hook.py  input_extract.py  interactive_orchestrator.py  item_regenerator.py  mock_orchestrator.py  outline_mutation.py  registry.py  review_gate.py  server.py  sessions.py  snapshots.py  stage.py  stale.py  stale_propagation.py  state_persistence.py  ws_protocol.py
src/shuttleslide/agent/review/editors/: __init__.py  base.py  image_uploader.py  json_editor.py  slide_editor.py  svg_editor.py
src/shuttleslide/agent/review/static/: app.js  index.html  styles.css
src/shuttleslide/agent/templates/: __init__.py  presentation.html.j2
src/shuttleslide/agent/templates/layouts/: free_form.html.j2
src/shuttleslide/agent/tools/: __init__.py  outline_tools.py  registry.py  slide_tools.py  svg_tools.py  theme_tools.py
src/shuttleslide/extensions/: __init__.py  cli_registry.py  skill_registry.py
src/shuttleslide/html_to_pptx/: __init__.py  font_embedder.py  fonts.py  html_utils.py  image_utils.py  layouts.py  renderer.py  schema.py  style_mapper.py  vector_icon.py
src/shuttleslide/html_to_pptx/analyzer/: __init__.py  browser.py  extractor.py
src/shuttleslide/html_to_pptx/js/: extract_background.js  extract_layout.js  extract_theme.js
src/shuttleslide/html_to_pptx/rule/: __init__.py  classifier.py  containment.py  converter.py  layout.py  transformer.py
src/shuttleslide/pptx_to_html/: __init__.py  models.py  parser.py  text_measure.py  theme_colors.py
src/shuttleslide/pptx_to_html/converters/: __init__.py  images.py  shapes.py  svg_generator.py  tables.py  text.py
src/shuttleslide/pptx_to_html/converters/ecma_geometry/: __init__.py  coordinate_system.py  formula_engine.py  parser.py  path_converter.py  preset_cache.py
src/shuttleslide/pptx_to_html/layouts/: absolute.py  base.py  flow.py  pptview.py  slideshow.py
src/shuttleslide/pptx_to_html/parser/: __init__.py  background_mixin.py  bullets_mixin.py  color_mixin.py  core.py  group_mixin.py  image_mixin.py  master_styles_mixin.py  shape_mixin.py  table_mixin.py  text_mixin.py
src/shuttleslide/pptx_to_html/templates/: pptview.css  pptview.html  pptview.js  slideshow.css  slideshow.html  slideshow.js
src/shuttleslide/pptx_to_html/utils/: __init__.py  colors.py  namespaces.py  text_sanitizer.py  units.py
src/shuttleslide/skills/: __init__.py
src/shuttleslide/skills/slidecraft/: SKILL.md
src/shuttleslide/skills/slidecraft-review/: SKILL.md
src/shuttleslide/skills/slidecraft-to-html/: SKILL.md
tests/: __init__.py  test_line_spacing_accuracy.py  test_paragraph_spacing_accuracy.py  test_pptx_to_html.py
