[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shuttleslide"
version = "0.1.0"
description = "Bidirectional conversion between PowerPoint (PPTX) and HTML with round-trip format preservation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Shuttleslide Contributors"}
]
keywords = ["pptx", "html", "conversion", "powerpoint", "presentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]
dependencies = [
    "python-pptx>=0.6.21",
    "click>=8.0.0",
    "lxml>=4.9.0",
    "Pillow>=9.0.0",
    "jinja2>=3.1.0",
    "openai>=1.0,<2.0",
    "trafilatura>=1.12.0",
    "requests>=2.28.0",
    "playwright>=1.40.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/shuttleslide"
Repository = "https://github.com/yourusername/shuttleslide"
Issues = "https://github.com/yourusername/shuttleslide/issues"

[project.scripts]
slidecraft = "shuttleslide.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"shuttleslide.agent" = ["templates/*.html.j2", "templates/elements/*.html.j2"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
